adding notes on jquery

--- a/notes/code_notes/notes_annotator.scss
+++ b/notes/code_notes/notes_annotator.scss
@@ -7,7 +7,7 @@ $base-font-size: 14px;
 
 //HIGHLIGHTS////////////////////////////////
 .annotator-highlights-always-on {
-  .annotator-hl {
+  .red {
       background-color: $highlight-red;
       cursor: pointer;
     }
